--- a/Qt/mainwindow.ui
+++ b/Qt/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>415</width>
-    <height>459</height>
+    <width>480</width>
+    <height>556</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -32,6 +32,12 @@
    <bool>false</bool>
   </property>
   <widget class="QWidget" name="centralwidget">
+   <property name="sizePolicy">
+    <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+     <horstretch>0</horstretch>
+     <verstretch>0</verstretch>
+    </sizepolicy>
+   </property>
    <layout class="QVBoxLayout" name="verticalLayout">
     <item>
      <widget class="QTabWidget" name="tabWidget">
@@ -73,7 +79,7 @@
         <item row="1" column="1">
          <widget class="QLineEdit" name="searchEncoder">
           <property name="placeholderText">
-           <string>Search for Encoder by Username or Device ID</string>
+           <string>Search for Encoder</string>
           </property>
           <property name="clearButtonEnabled">
            <bool>true</bool>
@@ -95,6 +101,12 @@
         </item>
         <item row="0" column="0" colspan="2">
          <widget class="QListWidget" name="listEncoder">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
           <property name="sortingEnabled">
            <bool>false</bool>
           </property>
@@ -116,7 +128,7 @@
            <bool>true</bool>
           </property>
           <property name="placeholderText">
-           <string>Search for Actuator by Name or Device ID</string>
+           <string>Search for Actuator</string>
           </property>
           <property name="clearButtonEnabled">
            <bool>true</bool>
