--- a/Qt/encoderconfigurationdialog.ui
+++ b/Qt/encoderconfigurationdialog.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>217</width>
-    <height>110</height>
+    <height>190</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -19,22 +19,8 @@
      <property name="title">
       <string>Switch Configuration:</string>
      </property>
-     <layout class="QFormLayout" name="formLayout">
-      <item row="0" column="1">
-       <widget class="QCheckBox" name="checkSwitchEnable">
-        <property name="text">
-         <string>Enable</string>
-        </property>
-       </widget>
-      </item>
-      <item row="1" column="1">
-       <widget class="QSpinBox" name="spinLatchTime">
-        <property name="suffix">
-         <string> sec.</string>
-        </property>
-       </widget>
-      </item>
-      <item row="0" column="0">
+     <layout class="QGridLayout" name="gridLayout">
+      <item row="1" column="0" colspan="2">
        <widget class="QLineEdit" name="lineSwitchKey">
         <property name="text">
          <string/>
@@ -47,10 +33,37 @@
         </property>
        </widget>
       </item>
-      <item row="1" column="0">
+      <item row="2" column="0">
        <widget class="QLabel" name="labelLatch">
         <property name="text">
          <string>Latching Delay:</string>
+        </property>
+       </widget>
+      </item>
+      <item row="4" column="1">
+       <widget class="QPushButton" name="buttonApply">
+        <property name="text">
+         <string>Apply</string>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="0" colspan="2">
+       <widget class="QCheckBox" name="checkSwitchEnable">
+        <property name="text">
+         <string>Enable Switch</string>
+        </property>
+       </widget>
+      </item>
+      <item row="3" column="0" colspan="2">
+       <widget class="QSpinBox" name="spinLatchTime">
+        <property name="suffix">
+         <string> seconds</string>
+        </property>
+        <property name="maximum">
+         <number>60</number>
+        </property>
+        <property name="singleStep">
+         <number>1</number>
         </property>
        </widget>
       </item>
