--- a/Qt/encoderconfigurationdialog.ui
+++ b/Qt/encoderconfigurationdialog.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>217</width>
+    <width>222</width>
     <height>190</height>
    </rect>
   </property>
@@ -20,7 +20,14 @@
       <string>Switch Configuration:</string>
      </property>
      <layout class="QGridLayout" name="gridLayout">
-      <item row="1" column="0" colspan="2">
+      <item row="0" column="1">
+       <widget class="QCheckBox" name="checkBox">
+        <property name="text">
+         <string>Latching</string>
+        </property>
+       </widget>
+      </item>
+      <item row="3" column="0" colspan="2">
        <widget class="QLineEdit" name="lineSwitchKey">
         <property name="text">
          <string/>
@@ -33,28 +40,28 @@
         </property>
        </widget>
       </item>
-      <item row="2" column="0">
-       <widget class="QLabel" name="labelLatch">
-        <property name="text">
-         <string>Latching Delay:</string>
-        </property>
-       </widget>
-      </item>
-      <item row="4" column="1">
+      <item row="9" column="1">
        <widget class="QPushButton" name="buttonApply">
         <property name="text">
          <string>Apply</string>
         </property>
        </widget>
       </item>
-      <item row="0" column="0" colspan="2">
-       <widget class="QCheckBox" name="checkSwitchEnable">
+      <item row="7" column="0">
+       <widget class="QLabel" name="labelLatch">
         <property name="text">
-         <string>Enable Switch</string>
+         <string>Delay:</string>
         </property>
        </widget>
       </item>
-      <item row="3" column="0" colspan="2">
+      <item row="0" column="0">
+       <widget class="QCheckBox" name="checkSwitchEnable">
+        <property name="text">
+         <string>Enable </string>
+        </property>
+       </widget>
+      </item>
+      <item row="8" column="0" colspan="2">
        <widget class="QSpinBox" name="spinLatchTime">
         <property name="suffix">
          <string> seconds</string>
