--- a/Qt/ideasxdevice.ui
+++ b/Qt/ideasxdevice.ui
@@ -242,6 +242,13 @@
        <bool>true</bool>
       </property>
      </widget>
+     <zorder>labelDeviceType</zorder>
+     <zorder>labelSignal</zorder>
+     <zorder>labelBattery</zorder>
+     <zorder>buttonSwitchOne</zorder>
+     <zorder>buttonSwitchTwo</zorder>
+     <zorder>buttonSwitchAdaptive</zorder>
+     <zorder>labelModuleID</zorder>
     </widget>
    </item>
    <item>
@@ -254,8 +261,8 @@
      </property>
      <property name="minimumSize">
       <size>
-       <width>120</width>
-       <height>66</height>
+       <width>160</width>
+       <height>75</height>
       </size>
      </property>
      <property name="maximumSize">
@@ -267,15 +274,15 @@
      <widget class="QLabel" name="labelStatus">
       <property name="geometry">
        <rect>
-        <x>-70</x>
-        <y>47</y>
+        <x>-26</x>
+        <y>44</y>
         <width>181</width>
         <height>31</height>
        </rect>
       </property>
       <property name="font">
        <font>
-        <pointsize>6</pointsize>
+        <pointsize>10</pointsize>
         <italic>true</italic>
        </font>
       </property>
@@ -289,7 +296,7 @@
      <widget class="QToolButton" name="buttonMenu">
       <property name="geometry">
        <rect>
-        <x>95</x>
+        <x>131</x>
         <y>10</y>
         <width>21</width>
         <height>36</height>
@@ -308,7 +315,7 @@
      <widget class="QToolButton" name="buttonActivate">
       <property name="geometry">
        <rect>
-        <x>5</x>
+        <x>41</x>
         <y>10</y>
         <width>91</width>
         <height>36</height>
