--- a/qt/mainwindow.ui
+++ b/qt/mainwindow.ui
@@ -60,7 +60,7 @@
        <enum>QTabWidget::West</enum>
       </property>
       <property name="currentIndex">
-       <number>2</number>
+       <number>0</number>
       </property>
       <property name="elideMode">
        <enum>Qt::ElideNone</enum>
@@ -258,7 +258,7 @@
              </property>
             </widget>
            </item>
-           <item row="2" column="1">
+           <item row="1" column="1">
             <widget class="QLineEdit" name="networkPort">
              <property name="inputMethodHints">
               <set>Qt::ImhPreferNumbers</set>
@@ -288,13 +288,20 @@
              </property>
             </widget>
            </item>
-           <item row="5" column="1">
+           <item row="4" column="1">
             <widget class="QLineEdit" name="localPort">
              <property name="inputMethodHints">
               <set>Qt::ImhPreferNumbers</set>
              </property>
              <property name="placeholderText">
               <string>Port</string>
+             </property>
+            </widget>
+           </item>
+           <item row="6" column="0">
+            <widget class="QLabel" name="labelOTA">
+             <property name="text">
+              <string>OTA Server:</string>
              </property>
             </widget>
            </item>
@@ -308,10 +315,10 @@
              </property>
             </widget>
            </item>
-           <item row="6" column="0">
-            <widget class="QLabel" name="labelOTA">
-             <property name="text">
-              <string>OTA Server:</string>
+           <item row="7" column="1">
+            <widget class="QLineEdit" name="lineEdit_2">
+             <property name="placeholderText">
+              <string>Port</string>
              </property>
             </widget>
            </item>
