--- a/qt/mainwindow.ui
+++ b/qt/mainwindow.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>525</width>
-    <height>648</height>
+    <height>753</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -60,7 +60,7 @@
        <enum>QTabWidget::West</enum>
       </property>
       <property name="currentIndex">
-       <number>0</number>
+       <number>2</number>
       </property>
       <property name="elideMode">
        <enum>Qt::ElideNone</enum>
@@ -136,8 +136,8 @@
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>459</width>
-             <height>556</height>
+             <width>456</width>
+             <height>658</height>
             </rect>
            </property>
           </widget>
@@ -332,7 +332,7 @@
           </property>
          </widget>
         </item>
-        <item alignment="Qt::AlignTop">
+        <item>
          <widget class="QGroupBox" name="groupDeviceSettings">
           <property name="title">
            <string>Device Settings</string>
@@ -369,7 +369,11 @@
             </widget>
            </item>
            <item row="2" column="1">
-            <widget class="QLineEdit" name="wifiSSID"/>
+            <widget class="QLineEdit" name="wifiSSID">
+             <property name="clearButtonEnabled">
+              <bool>true</bool>
+             </property>
+            </widget>
            </item>
            <item row="3" column="0">
             <widget class="QLabel" name="labelPassword">
@@ -379,7 +383,31 @@
             </widget>
            </item>
            <item row="3" column="1">
-            <widget class="QLineEdit" name="wifiPassword"/>
+            <widget class="QLineEdit" name="wifiPassword">
+             <property name="clearButtonEnabled">
+              <bool>true</bool>
+             </property>
+            </widget>
+           </item>
+           <item row="5" column="0">
+            <widget class="QLabel" name="labelPort">
+             <property name="text">
+              <string>Port:</string>
+             </property>
+            </widget>
+           </item>
+           <item row="5" column="1">
+            <widget class="QComboBox" name="selectPort"/>
+           </item>
+           <item row="6" column="1">
+            <widget class="QToolButton" name="buttonRefreshPorts">
+             <property name="layoutDirection">
+              <enum>Qt::LeftToRight</enum>
+             </property>
+             <property name="text">
+              <string>Refresh Ports</string>
+             </property>
+            </widget>
            </item>
           </layout>
          </widget>
@@ -388,6 +416,9 @@
          <widget class="QDialogButtonBox" name="buttonBoxDevice">
           <property name="standardButtons">
            <set>QDialogButtonBox::Cancel|QDialogButtonBox::Save</set>
+          </property>
+          <property name="centerButtons">
+           <bool>false</bool>
           </property>
          </widget>
         </item>
