--- a/qt/mainwindow.ui
+++ b/qt/mainwindow.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>525</width>
-    <height>753</height>
+    <height>789</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -137,7 +137,7 @@
              <x>0</x>
              <y>0</y>
              <width>456</width>
-             <height>658</height>
+             <height>694</height>
             </rect>
            </property>
           </widget>
@@ -335,71 +335,48 @@
         <item>
          <widget class="QGroupBox" name="groupDeviceSettings">
           <property name="title">
-           <string>Device Settings</string>
+           <string>Device Wi-Fi Settings</string>
           </property>
           <layout class="QFormLayout" name="formLayout_2">
            <item row="1" column="0">
-            <widget class="QLabel" name="labelAPSelector">
-             <property name="text">
-              <string>Wi-Fi Access Point:</string>
-             </property>
-            </widget>
-           </item>
-           <item row="1" column="1">
-            <widget class="QSpinBox" name="selectAP">
-             <property name="suffix">
-              <string/>
-             </property>
-             <property name="prefix">
-              <string>Access Point </string>
-             </property>
-             <property name="minimum">
-              <number>1</number>
-             </property>
-             <property name="maximum">
-              <number>5</number>
-             </property>
-            </widget>
-           </item>
-           <item row="2" column="0">
             <widget class="QLabel" name="labelSSID">
              <property name="text">
               <string>SSID:</string>
              </property>
             </widget>
            </item>
-           <item row="2" column="1">
+           <item row="1" column="1">
             <widget class="QLineEdit" name="wifiSSID">
              <property name="clearButtonEnabled">
               <bool>true</bool>
              </property>
             </widget>
            </item>
-           <item row="3" column="0">
+           <item row="2" column="0">
             <widget class="QLabel" name="labelPassword">
              <property name="text">
               <string>Password:</string>
              </property>
             </widget>
            </item>
-           <item row="3" column="1">
+           <item row="2" column="1">
             <widget class="QLineEdit" name="wifiPassword">
              <property name="clearButtonEnabled">
               <bool>true</bool>
              </property>
             </widget>
            </item>
-           <item row="5" column="0">
+           <item row="4" column="0">
             <widget class="QLabel" name="labelPort">
              <property name="text">
               <string>Port:</string>
              </property>
             </widget>
            </item>
-           <item row="5" column="1">
+           <item row="4" column="1">
             <widget class="QComboBox" name="selectPort"/>
            </item>
-           <item row="6" column="1">
+           <item row="5" column="1">
             <widget class="QToolButton" name="buttonRefreshPorts">
              <property name="layoutDirection">
               <enum>Qt::LeftToRight</enum>
